Error handling and signal building push. Moved the templates that used to be SocialInteraction(deleted) into the Content app. Continue Error Handling from here.

--- a/UserManagement/templates/UserManagement/login.html
+++ b/UserManagement/templates/UserManagement/login.html
@@ -31,8 +31,7 @@
                         <button type="submit" class="btn btn-primary">Login</button>
                     </form>
                 </div>
-               <a href="{% provider_login_url 'google' %}" class="btn btn-danger" id="googleLoginBtn">Login with
-                   Google</a>
+               <a href="{% provider_login_url 'google' %}" class="btn btn-danger" id="googleLoginBtn">Login with Google</a>
 
                 <br>
                 <a href="{% url 'UserManagement:register' %}" class="btn btn-primary">Don't have an Account? Register</a>
