--- a/UserManagement/templates/UserManagement/base.html
+++ b/UserManagement/templates/UserManagement/base.html
@@ -31,7 +31,7 @@
                     <li class="nav-item"><a class="nav-link" href="{% url 'UserManagement:home' %}">Home</a></li>
                     {% if user.is_authenticated %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'UserManagement:profile' %}">
+                            <a class="nav-link" href="{% url 'UserManagement:profile' slug=user.slug %}">
                                 Profile <i class="fas fa-user"></i>
                             </a>
                         </li>
