--- a/UserManagement/templates/UserManagement/edit_profile.html
+++ b/UserManagement/templates/UserManagement/edit_profile.html
@@ -23,7 +23,7 @@
                 <button type="submit" class="btn btn-primary">Save changes</button>
             </div>
             <div class="col-auto">
-                <a href="{% url 'UserManagement:profile' %}" class="btn btn-primary">Cancel</a>
+                <a href="{% url 'UserManagement:profile' slug=user.slug %}" class="btn btn-primary">Cancel</a>
             </div>
         </div>
     </form>
