--- a/UserManagement/templates/UserManagement/base.html
+++ b/UserManagement/templates/UserManagement/base.html
@@ -64,7 +64,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     
     <footer>
-    <img id="csumb_logo" src="{{ MEDIA_URL }}logo.png" alt="CSUMB Logo">
+    <img id="csumb_logo" src="{{ MEDIA_URL }}CSUMB.png" alt="CSUMB Logo">
     <p>CST438. 2024 ⒸLuciano, Baker, Rodas, Grimaldo</p>
 </footer>
     {% block extra_body %}{% endblock %}
