--- a/UserManagement/static/UserManagement/styles.css
+++ b/UserManagement/static/UserManagement/styles.css
@@ -160,7 +160,7 @@ h2 {
 }
 
 #login-container {
-    background-image: url('/media/background.jpg');
+    background-image: url('/frontend/src/assets/background.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
