--- a/UserManagement/templates/UserManagement/login.html
+++ b/UserManagement/templates/UserManagement/login.html
@@ -6,7 +6,7 @@
 {% block content %}
     <style>
     body {
-        background-image: url('/media/background.jpg');
+        background-image: url('/frontend/src/assets/background.jpg');
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
