--- a/UserManagement/templates/UserManagement/home.html
+++ b/UserManagement/templates/UserManagement/home.html
@@ -12,7 +12,7 @@
             </p>
         </div>
         <div class="col-md-4 homepage-aside">
-            <img src="{{ MEDIA_URL }}homepic.jpeg" alt="Owner and Dog" class="img-fluid">
+            <img src="{{ MEDIA_URL }}../../../frontend/src/assets/homepic.jpeg" alt="Owner and Dog" class="img-fluid">
             <div class="mt-3">
                 <a href="{% url 'UserManagement:login' %}" class="homepage-button">Login</a>
                 <a href="{% url 'UserManagement:register' %}" class="homepage-button">Register</a>
